<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_newReport"
        android:enabled="true"
        android:title="@string/text_newReport"
        android:icon="@drawable/ic_new_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_viewMap"
        android:enabled="true"
        android:title="@string/text_viewMap"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_viewReports"
        android:enabled="true"
        android:title="@string/text_viewReports"
        android:icon="@drawable/ic_report"
        app:showAsAction="ifRoom" />
</menu>