<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Spinner
            android:id="@+id/spinner_water_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_water_type_and_virus_ppm"
            android:layout_alignStart="@+id/title_water_type_and_virus_ppm"
            android:layout_below="@+id/spinner_water_condition"
            android:layout_marginTop="35dp" />

        <EditText
            android:id="@+id/text_virus_ppm"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner_water_type"
            android:layout_alignTop="@+id/spinner_water_type"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:visibility="invisible"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/text_contaminant_ppm"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title_contaminant_ppm"
            android:layout_below="@+id/title_contaminant_ppm"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:visibility="invisible"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button_submit"
            tools:ignore="ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/title_contaminant_ppm"
            android:layout_alignStart="@+id/text_contaminant_ppm"
            android:layout_below="@+id/text_contaminant_ppm"
            android:layout_marginTop="16dp"
            android:background="@color/colorButton"
            android:text="@string/button_submit" />

        <TextView
            android:id="@+id/title_contaminant_ppm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner_water_type"
            android:layout_alignStart="@+id/text_virus_ppm"
            android:layout_below="@+id/text_virus_ppm"
            android:layout_marginTop="15dp"
            android:text="@string/label_contaminant_ppm"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spinner_water_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/title_water_condition_and_overall_condition"
            android:layout_below="@+id/title_water_condition_and_overall_condition"
            android:layout_marginEnd="74dp" />

        <Spinner
            android:id="@+id/spinner_overall_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner_water_condition"
            android:layout_alignStart="@+id/spinner_water_condition"
            android:layout_below="@+id/title_water_condition_and_overall_condition"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title_water_type_and_virus_ppm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner_water_condition"
            android:layout_alignStart="@+id/spinner_water_condition"
            android:layout_below="@+id/spinner_overall_condition"
            android:layout_marginTop="40dp"
            android:text="@string/label_watertype" />

        <TextView
            android:id="@+id/title_water_condition_and_overall_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_location"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="11dp"
            android:text="@string/label_watercondition" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:textOff="@string/waterSource"
            android:textOn="@string/waterPurity" />

        <TextView
            android:id="@+id/text_report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/waterSourceReport" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch1"
            android:layout_below="@+id/text_report_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="26dp"
            android:text="@string/location" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_location"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_latitude"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/text_longitude"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="numberDecimal" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
