<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="edu.gatech.group16.watersourcingproject.controller.LoadScreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="165dp"
        android:adjustViewBounds="false" />

    <Button
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_button"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="300dp"
        android:paddingRight="49dp"
        android:paddingLeft="49dp"
        android:background="?attr/colorAccent" />

    <Button
        android:text="@string/login_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration_button"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="350dp"
        android:paddingLeft="10dp"
        android:background="?attr/colorAccent"
        android:paddingRight="20dp" />

</FrameLayout>
