<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.gatech.group16.watersourcingproject.controller.HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_textview"
        android:elevation="1dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:text="@string/label_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_label_title"
                        android:layout_marginTop="50dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="60dp">

                        <TextView
                            android:text="@string/label_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_label_name" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edit_text_name" />

                        <TextView
                            android:text="@string/label_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_label_email"
                            android:layout_marginTop="20dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/edit_text_email" />

                        <TextView
                            android:text="@string/label_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_label_password" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/editText5" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <Button
                                android:text="@string/button_cancel"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/edit_button_cancel"
                                android:layout_weight="1"
                                android:background="@color/colorButton"
                                tools:ignore="ButtonStyle"
                                android:layout_marginEnd="7dp" />

                            <Button
                                android:text="@string/button_save"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/edit_button_save"
                                android:background="@color/colorButton"
                                android:layout_weight="1"
                                tools:ignore="ButtonStyle"
                                android:layout_marginStart="7dp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
